src/components/my-widgets-collaborate-dialog.scss
// Collaborate dialog
.modal .collaborate-modal {
	width: 620px;
	height: 500px;

	font-family: 'Lato', arial, serif;

	.title {
		margin: 0;
		padding: 0;
		font-size: 1.3em;
		color: #555;
		border-bottom: #999 dotted 1px;
		padding-bottom: 20px;
		margin-bottom: 20px;
		position: relative;
		text-align: left;
		display: block;
		
		font-weight: bold;
	}

	.search-container {
		margin-bottom: 20px;
		display: flex;
		text-align: left;
		justify-content: center;
		width: 100%;
		align-items: center;

		.collab-input-label {
			font-size: 19px;
			margin-right: auto;
		}
	}

	.user-add {
		width: 445px;
		height: 30px;
		z-index: 2;
		border: solid 1px #c9c9c9;
		font-size: 16px;
	}

	.shareNotAllowed {
		display: none;

		&.show {
			display: block;
			height: 25px;
		}

		p {
			padding-top: 5px;
			text-align: center;
			margin: 0px;
			font-size: 0.8em;
			color: red;
		}
	}

	.collab-search-list {
		width: 447px;
		position: absolute;
		background-color: #ffffff;
		border: #bfbfbf 1px solid;
		padding-bottom: 5px;
		overflow: auto;
		z-index: 3;
		text-align: left;
		left: 114px;
		display: flex;
		flex-wrap: wrap;
		align-items: flex-start;

		.collab-search-match {
			width: 200px;
			height: 56px;
			margin: 5px 5px 0 5px;
			padding: 0 5px 5px 0;
			border-radius: 3px;
			display: inline-block;
			background-color: #ffffff;

			.collab-match-avatar {
				width: 50px;
				height: 50px;
				-moz-border-radius: 3px;
				border-radius: 3px;
				display: inline-block;
				float: left;
				margin-right: 10px;
				margin: 5px;
			}

			.collab-match-name {
				font-size: 14px;
				text-align: left;
				height: 40px;
				font-family: 'Lucida Grande', sans-serif;
				overflow: auto;
			}
		}

		.collab-match-student {
			position: relative;
		}
		.collab-match-student:after {
			content: 'Student';
			position: absolute;
			bottom: 5px;
			left: 0;
			font-size: 10px;
		}

		.collab-search-match:hover {
			background-color: #c5e7fa;
			cursor: pointer;
		}
	}

	.collab-container {
		margin: 0 20px;

		.access-list {
			margin-top: 0px;
			background-color: #f2f2f2;
			height: 250px;
			border-radius: 5px;
			padding: 0 30px;
			text-align: right;
			overflow: auto;

			&.no-content {
				display: flex;
				align-items: center;
				justify-content: center;
			}
		}

		.btn-box {
			align-items: flex-end;
			justify-content: center;
			display: flex;
			margin-top: 35px;

			a {
				cursor: pointer;
			}
		}
	}

	.disclaimer {
		text-align: center;
		color: #575757;
		font-size: 14px;
		margin-top: 10px;
	}

	.access-list {
		.deleted {
			display: none !important;
		}

		.user-perm {
			display: flex;
			align-items: center;
			position: relative;
			margin: 25px 10px;

			&::after {
				content: ' ';
				width: 70%;
				margin-left: 15%; // (100% - 70%) / 2
				display: block;
				border-bottom: 1px solid #d2d2d2;
				position: absolute;
				bottom: -12.5px;
			}

			&:last-child::after {
				display: none;
			}

			.demote-dialog {
				border-radius: 4px;
				box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
				padding: 1em;
				width: 310px;
				font-family: 'Lucida Grande', sans-serif;
				font-size: 9pt;
				color: black;
				text-align: center;
				background: #fcdbdb;
				height: 40px;
				z-index: 10000;
				position: absolute;
				margin-left: 125px;

				.arrow {
					background: url(/img/pink-arrow-left.png) no-repeat 0 center;
					width: 13px;
					//height: 23px;
					display: inline-block;
					top: 0;
					left: -13px;
					position: absolute;
					height: 100%;
				}

				.warning {
					display: block;
					margin: -4px 0 6px 0;
					text-align: center;
				}

				.button {
					text-align: center;
					margin: 0 10px 0 10px;
				}

				.no-button {
					color: #555;
					text-decoration: underline;
					font-size: 12pt;
					cursor: pointer;
				}

				.yes-button {
					background: #e10000;
					border-color: #747474;
					color: #ffffff;
					padding: 3px 15px;
				}

				.yes-button:hover {
					background: #ca0000;
					text-decoration: none;
				}
			}

			.remove {
				display: block;
				color: #bfbfbf;
				text-decoration: none;
				font-size: 15px;
				text-align: center;
				padding: 0.5em;
				margin: 0.5em;
				user-select: none;
				border: none;
				background: transparent;

				&:hover:enabled {
					color: black;
					background: white;
					border-radius: 5px;
					cursor: pointer;
				}

				&:disabled {
					color: transparent;
				}
			}

			.about {
				.avatar {
					vertical-align: middle;
					display: inline-block;
					height: 50px;
					width: 50px;
					margin-right: 10px;
				}
				.name {
					font-weight: bold;
					font-size: 15px;
					text-align: left;
					position: relative;

					&.user-match-student:after {
						content: 'Student';
						position: absolute;
						top: -12px;
						left: 0;
						font-size: 11px;
						color: gray;
					}
				}
			}

			.options {
				margin-left: auto;
				margin-right: 10%;
				text-align: left;

				select {
					cursor: pointer;
					display: inline-block;
					margin-bottom: 5px;
				}

				.expires {
					display: block;
					font-size: 8pt;
					position: relative;
					.remove {
						display: inline;
						font-size: 8pt;
					}
					.expire-open-button {
						text-transform: capitalize;
						display: inline-block;
						// border-bottom: 1px #1778af solid;
						border: none;
						background: transparent;
						color: #1778af;
						padding: 0 0 1px 0;
						font-weight: bold;
						font-size: 8pt;
						text-decoration: underline;
						cursor: pointer;

						&:hover {
							border-bottom: 1px #1778af solid;
							color: #135c85;
							padding: 0 0 1px 0;
						}
					}
					.expire-open-button-disabled {
						text-transform: capitalize;
						display: inline-block;
						border: none;
						background: transparent;
						padding: 0 0 1px 0;
						font-size: 8pt;
						color: #6d6d6d;
						font-weight: bold;
						cursor: auto;
					}
					.expire-date-container {
						position: absolute;
						display: block;
						right: 0;
						bottom: -10px;
						background: white;
						padding: 6px;
						border-radius: 5px;
						min-height: 25px;
						min-width: 150px;

						.remove {
							color: #7b7b7b;
							margin-right: 10px;
							&:hover {
								color: black;
							}
						}

						input {
							height: 100%;
							width: 100%;
							box-sizing: border-box;
							display: block;
						}

						.date-finish {
							cursor: pointer;
							padding: 4px;
							display: inline-block;
							background: #1778af;
							border-radius: 2px;
							color: white;
							font-weight: bold;
							margin-top: 5px;

							&:hover {
								background: #43a2d7;
							}
						}
					}
				}
			}
		}
	}
}

.react-datepicker__tab-loop .react-datepicker-popper {
	z-index: 9000;
}

